fix(code-block): fix border radius not working on Safari
see https://gist.github.com/ayamflow/b602ab436ac9f05660d9c15190f4fd7b

CLOSE https://github.com/UNICKCHENG/logseq-developer-theme/issues/3

--- a/scss/_code.scss
+++ b/scss/_code.scss
@@ -5,6 +5,7 @@
     -moz-border-radius: 10px !important;    // Firefox 1-3.6 
     -khtml-border-radius: 10px !important;  // Konqueror
     border-radius: 10px !important;         // Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+
+    -webkit-mask-image: -webkit-radial-gradient(white, black); // Hidden with border radius not working on Safari
 }
 
 .CodeMirror, 
